src/vb/project/VBParser.java
// $ANTLR 3.5.2 ..\\src\\vb\\project\\VB.g 2014-07-02 13:52:52

package vb.project;
import vb.project.nodes.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class VBParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BOOLEAN", "CHAR", 
		"CHARACTER", "COLON", "COMMA", "COMMENT", "COMPOUND", "CONST", "DIGIT", 
		"DIVIDE", "EQ", "EQUALS", "FALSE", "GT", "GTE", "ID", "INT", "INTEGER", 
		"LCURLY", "LETTER", "LPAREN", "LT", "LTE", "MINUS", "MODULO", "NEQ", "NOT", 
		"OR", "PLUS", "PROGRAM", "RCURLY", "READ", "RPAREN", "SEMICOLON", "TIMES", 
		"TRUE", "UNDERSCORE", "VAR", "WRITE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BOOLEAN=6;
	public static final int CHAR=7;
	public static final int CHARACTER=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int COMPOUND=12;
	public static final int CONST=13;
	public static final int DIGIT=14;
	public static final int DIVIDE=15;
	public static final int EQ=16;
	public static final int EQUALS=17;
	public static final int FALSE=18;
	public static final int GT=19;
	public static final int GTE=20;
	public static final int ID=21;
	public static final int INT=22;
	public static final int INTEGER=23;
	public static final int LCURLY=24;
	public static final int LETTER=25;
	public static final int LPAREN=26;
	public static final int LT=27;
	public static final int LTE=28;
	public static final int MINUS=29;
	public static final int MODULO=30;
	public static final int NEQ=31;
	public static final int NOT=32;
	public static final int OR=33;
	public static final int PLUS=34;
	public static final int PROGRAM=35;
	public static final int RCURLY=36;
	public static final int READ=37;
	public static final int RPAREN=38;
	public static final int SEMICOLON=39;
	public static final int TIMES=40;
	public static final int TRUE=41;
	public static final int UNDERSCORE=42;
	public static final int VAR=43;
	public static final int WRITE=44;
	public static final int WS=45;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public VBParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public VBParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return VBParser.tokenNames; }
	@Override public String getGrammarFileName() { return "..\\src\\vb\\project\\VB.g"; }


	public static class program_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "program"
	// ..\\src\\vb\\project\\VB.g:66:1: program : statements EOF -> ^( PROGRAM statements ) ;
	public final VBParser.program_return program() throws RecognitionException {
		VBParser.program_return retval = new VBParser.program_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope statements1 =null;

		VBNode EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");

		try {
			// ..\\src\\vb\\project\\VB.g:67:5: ( statements EOF -> ^( PROGRAM statements ) )
			// ..\\src\\vb\\project\\VB.g:67:9: statements EOF
			{
			pushFollow(FOLLOW_statements_in_program482);
			statements1=statements();
			state._fsp--;

			stream_statements.add(statements1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program484);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: statements
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (VBNode)adaptor.nil();
			// 68:9: -> ^( PROGRAM statements )
			{
				// ..\\src\\vb\\project\\VB.g:68:12: ^( PROGRAM statements )
				{
				VBNode root_1 = (VBNode)adaptor.nil();
				root_1 = (VBNode)adaptor.becomeRoot((VBNode)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_statements.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class statements_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "statements"
	// ..\\src\\vb\\project\\VB.g:71:1: statements : ( statement SEMICOLON !)* ;
	public final VBParser.statements_return statements() throws RecognitionException {
		VBParser.statements_return retval = new VBParser.statements_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token SEMICOLON4=null;
		ParserRuleReturnScope statement3 =null;

		VBNode SEMICOLON4_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:72:5: ( ( statement SEMICOLON !)* )
			// ..\\src\\vb\\project\\VB.g:72:9: ( statement SEMICOLON !)*
			{
			root_0 = (VBNode)adaptor.nil();


			// ..\\src\\vb\\project\\VB.g:72:9: ( statement SEMICOLON !)*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==CHAR||LA1_0==CONST||LA1_0==FALSE||(LA1_0 >= ID && LA1_0 <= INT)||LA1_0==LCURLY||LA1_0==LPAREN||LA1_0==MINUS||LA1_0==NOT||LA1_0==PLUS||LA1_0==READ||LA1_0==TRUE||(LA1_0 >= VAR && LA1_0 <= WRITE)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ..\\src\\vb\\project\\VB.g:72:10: statement SEMICOLON !
					{
					pushFollow(FOLLOW_statement_in_statements520);
					statement3=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement3.getTree());

					SEMICOLON4=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statements522); 
					}
					break;

				default :
					break loop1;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statements"


	public static class statement_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// ..\\src\\vb\\project\\VB.g:75:1: statement : ( decl | expr );
	public final VBParser.statement_return statement() throws RecognitionException {
		VBParser.statement_return retval = new VBParser.statement_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		ParserRuleReturnScope decl5 =null;
		ParserRuleReturnScope expr6 =null;


		try {
			// ..\\src\\vb\\project\\VB.g:76:5: ( decl | expr )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==CONST||LA2_0==VAR) ) {
				alt2=1;
			}
			else if ( (LA2_0==CHAR||LA2_0==FALSE||(LA2_0 >= ID && LA2_0 <= INT)||LA2_0==LCURLY||LA2_0==LPAREN||LA2_0==MINUS||LA2_0==NOT||LA2_0==PLUS||LA2_0==READ||LA2_0==TRUE||LA2_0==WRITE) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// ..\\src\\vb\\project\\VB.g:76:9: decl
					{
					root_0 = (VBNode)adaptor.nil();


					pushFollow(FOLLOW_decl_in_statement544);
					decl5=decl();
					state._fsp--;

					adaptor.addChild(root_0, decl5.getTree());

					}
					break;
				case 2 :
					// ..\\src\\vb\\project\\VB.g:77:9: expr
					{
					root_0 = (VBNode)adaptor.nil();


					pushFollow(FOLLOW_expr_in_statement554);
					expr6=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class decl_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// ..\\src\\vb\\project\\VB.g:80:1: decl : ( VAR ^ type id_list | CONST ^ type id_list EQUALS ! value );
	public final VBParser.decl_return decl() throws RecognitionException {
		VBParser.decl_return retval = new VBParser.decl_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token VAR7=null;
		Token CONST10=null;
		Token EQUALS13=null;
		ParserRuleReturnScope type8 =null;
		ParserRuleReturnScope id_list9 =null;
		ParserRuleReturnScope type11 =null;
		ParserRuleReturnScope id_list12 =null;
		ParserRuleReturnScope value14 =null;

		VBNode VAR7_tree=null;
		VBNode CONST10_tree=null;
		VBNode EQUALS13_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:80:5: ( VAR ^ type id_list | CONST ^ type id_list EQUALS ! value )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==VAR) ) {
				alt3=1;
			}
			else if ( (LA3_0==CONST) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// ..\\src\\vb\\project\\VB.g:80:9: VAR ^ type id_list
					{
					root_0 = (VBNode)adaptor.nil();


					VAR7=(Token)match(input,VAR,FOLLOW_VAR_in_decl568); 
					VAR7_tree = new DeclarationNode(VAR7) ;
					root_0 = (VBNode)adaptor.becomeRoot(VAR7_tree, root_0);

					pushFollow(FOLLOW_type_in_decl574);
					type8=type();
					state._fsp--;

					adaptor.addChild(root_0, type8.getTree());

					pushFollow(FOLLOW_id_list_in_decl576);
					id_list9=id_list();
					state._fsp--;

					adaptor.addChild(root_0, id_list9.getTree());

					}
					break;
				case 2 :
					// ..\\src\\vb\\project\\VB.g:81:9: CONST ^ type id_list EQUALS ! value
					{
					root_0 = (VBNode)adaptor.nil();


					CONST10=(Token)match(input,CONST,FOLLOW_CONST_in_decl586); 
					CONST10_tree = new DeclarationNode(CONST10) ;
					root_0 = (VBNode)adaptor.becomeRoot(CONST10_tree, root_0);

					pushFollow(FOLLOW_type_in_decl592);
					type11=type();
					state._fsp--;

					adaptor.addChild(root_0, type11.getTree());

					pushFollow(FOLLOW_id_list_in_decl594);
					id_list12=id_list();
					state._fsp--;

					adaptor.addChild(root_0, id_list12.getTree());

					EQUALS13=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_decl596); 
					pushFollow(FOLLOW_value_in_decl599);
					value14=value();
					state._fsp--;

					adaptor.addChild(root_0, value14.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl"


	public static class expr_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// ..\\src\\vb\\project\\VB.g:84:1: expr : assignment_expr ;
	public final VBParser.expr_return expr() throws RecognitionException {
		VBParser.expr_return retval = new VBParser.expr_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		ParserRuleReturnScope assignment_expr15 =null;


		try {
			// ..\\src\\vb\\project\\VB.g:84:5: ( assignment_expr )
			// ..\\src\\vb\\project\\VB.g:84:9: assignment_expr
			{
			root_0 = (VBNode)adaptor.nil();


			pushFollow(FOLLOW_assignment_expr_in_expr617);
			assignment_expr15=assignment_expr();
			state._fsp--;

			adaptor.addChild(root_0, assignment_expr15.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class assignment_expr_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "assignment_expr"
	// ..\\src\\vb\\project\\VB.g:87:1: assignment_expr : logical_or_expr ( ASSIGN ^ assignment_expr )? ;
	public final VBParser.assignment_expr_return assignment_expr() throws RecognitionException {
		VBParser.assignment_expr_return retval = new VBParser.assignment_expr_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token ASSIGN17=null;
		ParserRuleReturnScope logical_or_expr16 =null;
		ParserRuleReturnScope assignment_expr18 =null;

		VBNode ASSIGN17_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:88:5: ( logical_or_expr ( ASSIGN ^ assignment_expr )? )
			// ..\\src\\vb\\project\\VB.g:88:9: logical_or_expr ( ASSIGN ^ assignment_expr )?
			{
			root_0 = (VBNode)adaptor.nil();


			pushFollow(FOLLOW_logical_or_expr_in_assignment_expr636);
			logical_or_expr16=logical_or_expr();
			state._fsp--;

			adaptor.addChild(root_0, logical_or_expr16.getTree());

			// ..\\src\\vb\\project\\VB.g:88:25: ( ASSIGN ^ assignment_expr )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ASSIGN) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// ..\\src\\vb\\project\\VB.g:88:26: ASSIGN ^ assignment_expr
					{
					ASSIGN17=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignment_expr639); 
					ASSIGN17_tree = (VBNode)adaptor.create(ASSIGN17);
					root_0 = (VBNode)adaptor.becomeRoot(ASSIGN17_tree, root_0);

					pushFollow(FOLLOW_assignment_expr_in_assignment_expr642);
					assignment_expr18=assignment_expr();
					state._fsp--;

					adaptor.addChild(root_0, assignment_expr18.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment_expr"


	public static class read_stat_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "read_stat"
	// ..\\src\\vb\\project\\VB.g:91:1: read_stat : READ ^ LPAREN ! id_list RPAREN !;
	public final VBParser.read_stat_return read_stat() throws RecognitionException {
		VBParser.read_stat_return retval = new VBParser.read_stat_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token READ19=null;
		Token LPAREN20=null;
		Token RPAREN22=null;
		ParserRuleReturnScope id_list21 =null;

		VBNode READ19_tree=null;
		VBNode LPAREN20_tree=null;
		VBNode RPAREN22_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:92:5: ( READ ^ LPAREN ! id_list RPAREN !)
			// ..\\src\\vb\\project\\VB.g:92:9: READ ^ LPAREN ! id_list RPAREN !
			{
			root_0 = (VBNode)adaptor.nil();


			READ19=(Token)match(input,READ,FOLLOW_READ_in_read_stat663); 
			READ19_tree = (VBNode)adaptor.create(READ19);
			root_0 = (VBNode)adaptor.becomeRoot(READ19_tree, root_0);

			LPAREN20=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_read_stat666); 
			pushFollow(FOLLOW_id_list_in_read_stat669);
			id_list21=id_list();
			state._fsp--;

			adaptor.addChild(root_0, id_list21.getTree());

			RPAREN22=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_read_stat671); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "read_stat"


	public static class write_stat_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "write_stat"
	// ..\\src\\vb\\project\\VB.g:95:1: write_stat : WRITE ^ LPAREN ! expr_list RPAREN !;
	public final VBParser.write_stat_return write_stat() throws RecognitionException {
		VBParser.write_stat_return retval = new VBParser.write_stat_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token WRITE23=null;
		Token LPAREN24=null;
		Token RPAREN26=null;
		ParserRuleReturnScope expr_list25 =null;

		VBNode WRITE23_tree=null;
		VBNode LPAREN24_tree=null;
		VBNode RPAREN26_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:96:5: ( WRITE ^ LPAREN ! expr_list RPAREN !)
			// ..\\src\\vb\\project\\VB.g:96:9: WRITE ^ LPAREN ! expr_list RPAREN !
			{
			root_0 = (VBNode)adaptor.nil();


			WRITE23=(Token)match(input,WRITE,FOLLOW_WRITE_in_write_stat691); 
			WRITE23_tree = (VBNode)adaptor.create(WRITE23);
			root_0 = (VBNode)adaptor.becomeRoot(WRITE23_tree, root_0);

			LPAREN24=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_write_stat694); 
			pushFollow(FOLLOW_expr_list_in_write_stat697);
			expr_list25=expr_list();
			state._fsp--;

			adaptor.addChild(root_0, expr_list25.getTree());

			RPAREN26=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_write_stat699); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "write_stat"


	public static class compound_stat_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "compound_stat"
	// ..\\src\\vb\\project\\VB.g:99:1: compound_stat : LCURLY statements RCURLY -> ^( COMPOUND statements ) ;
	public final VBParser.compound_stat_return compound_stat() throws RecognitionException {
		VBParser.compound_stat_return retval = new VBParser.compound_stat_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token LCURLY27=null;
		Token RCURLY29=null;
		ParserRuleReturnScope statements28 =null;

		VBNode LCURLY27_tree=null;
		VBNode RCURLY29_tree=null;
		RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
		RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");

		try {
			// ..\\src\\vb\\project\\VB.g:100:5: ( LCURLY statements RCURLY -> ^( COMPOUND statements ) )
			// ..\\src\\vb\\project\\VB.g:100:9: LCURLY statements RCURLY
			{
			LCURLY27=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_compound_stat719);  
			stream_LCURLY.add(LCURLY27);

			pushFollow(FOLLOW_statements_in_compound_stat721);
			statements28=statements();
			state._fsp--;

			stream_statements.add(statements28.getTree());
			RCURLY29=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_compound_stat723);  
			stream_RCURLY.add(RCURLY29);

			// AST REWRITE
			// elements: statements
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (VBNode)adaptor.nil();
			// 101:9: -> ^( COMPOUND statements )
			{
				// ..\\src\\vb\\project\\VB.g:101:12: ^( COMPOUND statements )
				{
				VBNode root_1 = (VBNode)adaptor.nil();
				root_1 = (VBNode)adaptor.becomeRoot((VBNode)adaptor.create(COMPOUND, "COMPOUND"), root_1);
				adaptor.addChild(root_1, stream_statements.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "compound_stat"


	public static class logical_or_expr_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "logical_or_expr"
	// ..\\src\\vb\\project\\VB.g:104:1: logical_or_expr : logical_and_expr ( OR ^ logical_and_expr )* ;
	public final VBParser.logical_or_expr_return logical_or_expr() throws RecognitionException {
		VBParser.logical_or_expr_return retval = new VBParser.logical_or_expr_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token OR31=null;
		ParserRuleReturnScope logical_and_expr30 =null;
		ParserRuleReturnScope logical_and_expr32 =null;

		VBNode OR31_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:105:5: ( logical_and_expr ( OR ^ logical_and_expr )* )
			// ..\\src\\vb\\project\\VB.g:105:9: logical_and_expr ( OR ^ logical_and_expr )*
			{
			root_0 = (VBNode)adaptor.nil();


			pushFollow(FOLLOW_logical_and_expr_in_logical_or_expr758);
			logical_and_expr30=logical_and_expr();
			state._fsp--;

			adaptor.addChild(root_0, logical_and_expr30.getTree());

			// ..\\src\\vb\\project\\VB.g:105:26: ( OR ^ logical_and_expr )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==OR) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// ..\\src\\vb\\project\\VB.g:105:27: OR ^ logical_and_expr
					{
					OR31=(Token)match(input,OR,FOLLOW_OR_in_logical_or_expr761); 
					OR31_tree = new ExpressionNode(OR31) ;
					root_0 = (VBNode)adaptor.becomeRoot(OR31_tree, root_0);

					pushFollow(FOLLOW_logical_and_expr_in_logical_or_expr767);
					logical_and_expr32=logical_and_expr();
					state._fsp--;

					adaptor.addChild(root_0, logical_and_expr32.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (VBNode)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (VBNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logical_or_expr"


	public static class logical_and_expr_return extends ParserRuleReturnScope {
		VBNode tree;
		@Override
		public VBNode getTree() { return tree; }
	};


	// $ANTLR start "logical_and_expr"
	// ..\\src\\vb\\project\\VB.g:108:1: logical_and_expr : logical_comparative_expr ( AND ^ logical_comparative_expr )* ;
	public final VBParser.logical_and_expr_return logical_and_expr() throws RecognitionException {
		VBParser.logical_and_expr_return retval = new VBParser.logical_and_expr_return();
		retval.start = input.LT(1);

		VBNode root_0 = null;

		Token AND34=null;
		ParserRuleReturnScope logical_comparative_expr33 =null;
		ParserRuleReturnScope logical_comparative_expr35 =null;

		VBNode AND34_tree=null;

		try {
			// ..\\src\\vb\\project\\VB.g:109:5: ( logical_comparative_expr ( AND ^ logical_comparative_expr )* )
			// ..\\src\\vb\\project\\VB.g:109:9: logical_comparative_expr ( AND ^ logical_comparative_expr )*
			{
			root_0 = (VBNode)adaptor.nil();


			pushFollow(FOLLOW_logical_comparative_expr_in_logical_and_expr788);
			logical_comparative_expr33=logical_comparative_expr();
			state._fsp--;

			adaptor.addChild(root_0, logical_comparative_expr33.getTree());
